crates/schema/tests/compile_fail/secret_widget_mismatch.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/secret_widget_mismatch.rs:5:17
  |
5 |         .widget(nebula_schema::StringWidget::Plain);
  |          ------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `SecretWidget`, found `StringWidget`
  |          |
  |          arguments to this method are incorrect
  |
note: method defined here
 --> src/field.rs
  |
  |     pub const fn widget(mut self, widget: SecretWidget) -> Self {
  |                  ^^^^^^
